--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Samstag & Sonntag: 10.00 bis 18.00 Uhr</p>
 
   <div class="cookie-hinweis" id="cookiehinweis">
       <div class="col-left">
-        <p class="p-cookie">Wir nutzen Cookies um Nutzerverhalten zu analysieren und die Nutzerfreundlichkeit der Webseite zu optimieren.<br />Mehr darüber kannst du in unserer <router-link to="/pages/datenschutz.html">Datenschutzerklärung</router-link> erfahren.</p>
+        <p class="p-cookie">Wir nutzen Cookies um Nutzerverhalten zu analysieren und die Nutzerfreundlichkeit der Webseite zu optimieren.<br />Mehr darüber kannst du in unserer <a href="datenschutz.html">Datenschutzerklärung</a> erfahren.</p>
       </div>
       <div class="col-right">
           <a class="button cookie-hinweis-button" onclick='cookieOk()'>Akzeptieren</a>
