--- a/veranstaltungen.html
+++ b/veranstaltungen.html
@@ -63,7 +63,7 @@ content="Süße Köstlichkeiten im Hamburger Karolinen-Viertel." >
 
   <div class="cookie-hinweis" id="cookiehinweis">
       <div class="col-left">
-        <p class="p-cookie">Wir nutzen Cookies um Nutzerverhalten zu analysieren und die Nutzerfreundlichkeit der Webseite zu optimieren.<br />Mehr darüber kannst du in unserer <router-link to="/pages/datenschutz.html">Datenschutzerklärung</router-link> erfahren.</p>
+        <p class="p-cookie">Wir nutzen Cookies um Nutzerverhalten zu analysieren und die Nutzerfreundlichkeit der Webseite zu optimieren.<br />Mehr darüber kannst du in unserer <a href="datenschutz.html">Datenschutzerklärung</a> erfahren.</p>
       </div>
       <div class="col-right">
           <a class="button cookie-hinweis-button" onclick='cookieOk()'>Akzeptieren</a>
